# PaperLens

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
prompts/: academic_selection_explanation.txt
prompts/schemas/: ai_explanation.schema.json
scripts/: build_ecdict.py
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_collections.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/ai/: compatible.rs  error.rs  mock.rs  mod.rs  openai_responses.rs  provider.rs  types.rs
src-tauri/src/commands/: library.rs  mod.rs
src-tauri/src/data_transfer/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/dictionary/: mod.rs
src-tauri/src/files/: mod.rs
src-tauri/src/secure_store/: mod.rs
src-tauri/src/state/: mod.rs
src/app/: App.tsx
src/components/ai/: AiExplanationPanel.tsx  (+1 more)
src/hooks/: useAppBootstrap.ts  useGlobalShortcuts.ts  usePdfSelection.ts
src/stores/: aiStore.test.ts  aiStore.ts  annotationStore.ts  readerStore.ts  selectionStore.ts  settingsStore.ts  uiStore.ts
src/themes/: themes.css
src/types/: ai.test.ts  ai.ts  annotation.ts  collection.ts  dictionary.ts  paper.ts  selection.ts  settings.ts  vocabulary.ts
src/utils/: collectionTree.test.ts  collectionTree.ts  partialAi.ts  pdfZoom.test.ts  pdfZoom.ts  selectionGeometry.test.ts  selectionGeometry.ts  selectionText.test.ts  selectionText.ts  shortcuts.test.ts  shortcuts.ts
tests/e2e/: app.spec.ts
(+45 files in other folders)
