[package]
name = "paperlens"
version = "0.2.0"
description = "A local-first academic PDF reader for Chinese researchers"
authors = ["PaperLens contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "paperlens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
futures-util = "0.3"
hex = "0.4"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "sync", "time"] }
tokio-util = "0.7"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
